--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ license = "MIT"
 
 
 [dependencies]
+anyhow = { version = "1.0" }
+quick-xml = { version = "0.36.1", features = ["serialize"] }
+serde = { version = "1.0", features = ["derive"] }
